force-app/main/default/objects/TW1_Documentation__c/TW1_Documentation__c.object-meta.xml
<CustomObject>
    <label>Documentation</label>
    <nameField>
        <displayFormat>DOC{000000}</displayFormat>
        <label>Documentation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Documentations</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>