force-app/main/default/objects/TW1_Documentation__c/fields/MODEC_Contract__c.field-meta.xml
<CustomField>
    <fullName>MODEC_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MODEC Contract</label>
    <referenceTo>TW1_MODEC_Contract__c</referenceTo>
    <relationshipLabel>Documentations</relationshipLabel>
    <relationshipName>Documentations</relationshipName>
    <type>Lookup</type>
</CustomField>