force-app/main/default/objects/TW1_Documentation__c/fields/Step__c.field-meta.xml
<CustomField>
    <fullName>Step__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Step</label>
    <referenceTo>TW1_Step__c</referenceTo>
    <relationshipLabel>Documentations</relationshipLabel>
    <relationshipName>Documentations</relationshipName>
    <type>Lookup</type>
</CustomField>