force-app/main/default/objects/TW1_Documentation__c/fields/TCF_HSEEvaluation__c.field-meta.xml
<CustomField>
    <fullName>TCF_HSEEvaluation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Click here to return to the evaluation.</inlineHelpText>
    <label>HSEQ Evaluation</label>
    <referenceTo>TOBJ_AvaliacaoHSE__c</referenceTo>
    <relationshipLabel>Documentations</relationshipLabel>
    <relationshipName>DocumentationsHSEEvaluation</relationshipName>
    <type>Lookup</type>
</CustomField>