force-app/main/default/objects/TW1_Documentation__c/fields/TW1_Comments__c.field-meta.xml
<CustomField>
    <fullName>TW1_Comments__c</fullName>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>