force-app/main/default/objects/TW1_Documentation__c/fields/TW1_DocumentationAux__c.field-meta.xml
<CustomField>
    <fullName>TW1_DocumentationAux__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Booleano para controle dos documentation que foram efetivamente criados. 
para facilitar schedule de delete posterior.</description>
    <label>DocumentationAux</label>
    <type>Checkbox</type>
</CustomField>