force-app/main/default/objects/TW1_Documentation__c/fields/TW1_Files_name__c.field-meta.xml
<CustomField>
    <fullName>TW1_Files_name__c</fullName>
    <label>Files name</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>