force-app/main/default/objects/TW1_Documentation__c/fields/TW1_NF_invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>TW1_NF_invoice_Number__c</fullName>
    <label>NF/Invoice Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>