force-app/main/default/objects/TW1_Documentation__c/fields/TW1_Request__c.field-meta.xml
<CustomField>
    <fullName>TW1_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Request</label>
    <referenceTo>TW1_Request__c</referenceTo>
    <relationshipLabel>Documentations</relationshipLabel>
    <relationshipName>Documentations</relationshipName>
    <type>Lookup</type>
</CustomField>