force-app/main/default/objects/TW1_Documentation__c/fields/TW1_Vendor__c.field-meta.xml
<CustomField>
    <fullName>TW1_Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Documentations</relationshipLabel>
    <relationshipName>Documentations</relationshipName>
    <type>Lookup</type>
</CustomField>