force-app/main/default/objects/TW1_Documentation__c/recordTypes/Anti_Corruption_Compliance_Program_Programa_de_Conformidade_Anticorrup_o.recordType-meta.xml
<RecordType>
    <fullName>Anti_Corruption_Compliance_Program_Programa_de_Conformidade_Anticorrup_o</fullName>
    <active>true</active>
    <label>Anti-Corruption Compliance Program (Programa de Conformidade Anticorrupção)</label>
</RecordType>