force-app/main/default/objects/TW1_Documentation__c/recordTypes/Articles_of_Association_Contrato_Social.recordType-meta.xml
<RecordType>
    <fullName>Articles_of_Association_Contrato_Social</fullName>
    <active>true</active>
    <label>Articles of Association (Contrato Social)</label>
</RecordType>