force-app/main/default/objects/TW1_Documentation__c/recordTypes/Audited_and_Consolidated_Financial_Reports.recordType-meta.xml
<RecordType>
    <fullName>Audited_and_Consolidated_Financial_Reports</fullName>
    <active>true</active>
    <label>Audited and Consolidated Financial Reports</label>
</RecordType>