force-app/main/default/objects/TW1_Documentation__c/recordTypes/Bank_information_printed_on_company_letterhead_and_signed_by_Company_Director.recordType-meta.xml
<RecordType>
    <fullName>Bank_information_printed_on_company_letterhead_and_signed_by_Company_Director</fullName>
    <active>true</active>
    <description>Bank information printed on company letterhead and signed by Company Director(authorized signatory)</description>
    <label>Bank information printed on company letterhead and signed by Company Director</label>
</RecordType>