force-app/main/default/objects/TW1_Documentation__c/recordTypes/BM_Documents.recordType-meta.xml
<RecordType>
    <fullName>BM_Documents</fullName>
    <active>true</active>
    <label>BM Documents</label>
</RecordType>