force-app/main/default/objects/TW1_Documentation__c/recordTypes/Business_License_Alvar_de_Funcionamento.recordType-meta.xml
<RecordType>
    <fullName>Business_License_Alvar_de_Funcionamento</fullName>
    <active>true</active>
    <label>Business License (Alvará de Funcionamento)</label>
</RecordType>