force-app/main/default/objects/TW1_Documentation__c/recordTypes/Business_Sponsor_Questionnaire.recordType-meta.xml
<RecordType>
    <fullName>Business_Sponsor_Questionnaire</fullName>
    <active>true</active>
    <label>Business Sponsor Questionnaire</label>
</RecordType>