force-app/main/default/objects/TW1_Documentation__c/recordTypes/Capability_in_Manufacture_Assembly.recordType-meta.xml
<RecordType>
    <fullName>Capability_in_Manufacture_Assembly</fullName>
    <active>true</active>
    <label>Capability in Manufacture / Assembly</label>
</RecordType>