force-app/main/default/objects/TW1_Documentation__c/recordTypes/Capability_in_System_design_Engineering.recordType-meta.xml
<RecordType>
    <fullName>Capability_in_System_design_Engineering</fullName>
    <active>true</active>
    <label>Capability in System design / Engineering</label>
</RecordType>