force-app/main/default/objects/TW1_Documentation__c/recordTypes/Capability_in_Testing.recordType-meta.xml
<RecordType>
    <fullName>Capability_in_Testing</fullName>
    <active>true</active>
    <label>Capability in Testing</label>
</RecordType>