force-app/main/default/objects/TW1_Documentation__c/recordTypes/CCO_CFO_email_approval.recordType-meta.xml
<RecordType>
    <fullName>CCO_CFO_email_approval</fullName>
    <active>true</active>
    <label>CCO/ CFO email approval</label>
</RecordType>