force-app/main/default/objects/TW1_Documentation__c/recordTypes/Certificate_of_Approval_fire_department.recordType-meta.xml
<RecordType>
    <fullName>Certificate_of_Approval_fire_department</fullName>
    <active>true</active>
    <description>Certificate of Approval fire department (Certificado de Aprovação corpo de bombeiros)</description>
    <label>Certificate of Approval fire department</label>
</RecordType>