force-app/main/default/objects/TW1_Documentation__c/recordTypes/Code_of_Business_Conduct_and_Ethics.recordType-meta.xml
<RecordType>
    <fullName>Code_of_Business_Conduct_and_Ethics</fullName>
    <active>true</active>
    <label>Code of Business Conduct and Ethics</label>
</RecordType>