force-app/main/default/objects/TW1_Documentation__c/recordTypes/Current_Product_Performance.recordType-meta.xml
<RecordType>
    <fullName>Current_Product_Performance</fullName>
    <active>true</active>
    <label>Current Product Performance</label>
</RecordType>