force-app/main/default/objects/TW1_Documentation__c/recordTypes/Environmental_Risk_Prevention_Program_PPRA.recordType-meta.xml
<RecordType>
    <fullName>Environmental_Risk_Prevention_Program_PPRA</fullName>
    <active>true</active>
    <description>Environmental Risk Prevention Program – PPRA (Programa de Prevenção de Riscos Ambientais – PPRA)</description>
    <label>Environmental Risk Prevention Program – PPRA</label>
</RecordType>