force-app/main/default/objects/TW1_Documentation__c/recordTypes/EvidenceIncidentInvestigation.recordType-meta.xml
<RecordType>
    <fullName>EvidenceIncidentInvestigation</fullName>
    <active>true</active>
    <label>Evidence of Incident Investigation</label>
</RecordType>