force-app/main/default/objects/TW1_Documentation__c/recordTypes/Financial_Evaluation.recordType-meta.xml
<RecordType>
    <fullName>Financial_Evaluation</fullName>
    <active>true</active>
    <label>Financial Evaluation</label>
</RecordType>