force-app/main/default/objects/TW1_Documentation__c/recordTypes/HSE_Assessment.recordType-meta.xml
<RecordType>
    <fullName>HSE_Assessment</fullName>
    <active>true</active>
    <label>HSE Assessment</label>
</RecordType>