force-app/main/default/objects/TW1_Documentation__c/recordTypes/HSE_Audit.recordType-meta.xml
<RecordType>
    <fullName>HSE_Audit</fullName>
    <active>true</active>
    <label>HSE Audit</label>
</RecordType>