force-app/main/default/objects/TW1_Documentation__c/recordTypes/HSE_Policy.recordType-meta.xml
<RecordType>
    <fullName>HSE_Policy</fullName>
    <active>true</active>
    <label>HSE Policy</label>
</RecordType>