force-app/main/default/objects/TW1_Documentation__c/recordTypes/HSEQ_Evaluation.recordType-meta.xml
<RecordType>
    <fullName>HSEQ_Evaluation</fullName>
    <active>true</active>
    <label>HSEQ Evaluation</label>
</RecordType>