force-app/main/default/objects/TW1_Documentation__c/recordTypes/HSEQ_Questionnaire.recordType-meta.xml
<RecordType>
    <fullName>HSEQ_Questionnaire</fullName>
    <active>true</active>
    <label>HSEQ Questionnaire</label>
</RecordType>