force-app/main/default/objects/TW1_Documentation__c/recordTypes/Inexigibilidade_da_licen_a_Licenciamento_ambiental_if_applicable.recordType-meta.xml
<RecordType>
    <fullName>Inexigibilidade_da_licen_a_Licenciamento_ambiental_if_applicable</fullName>
    <active>true</active>
    <label>Inexigibilidade da licença (Licenciamento ambiental), if applicable</label>
</RecordType>