force-app/main/default/objects/TW1_Documentation__c/recordTypes/ISO_14001.recordType-meta.xml
<RecordType>
    <fullName>ISO_14001</fullName>
    <active>true</active>
    <label>ISO 14001</label>
</RecordType>