force-app/main/default/objects/TW1_Documentation__c/recordTypes/National_Registry_of_Legal_Person_CNPJ.recordType-meta.xml
<RecordType>
    <fullName>National_Registry_of_Legal_Person_CNPJ</fullName>
    <active>true</active>
    <label>National Registry of Legal Person (CNPJ)</label>
</RecordType>