force-app/main/default/objects/TW1_Documentation__c/recordTypes/Occupational_Health_and_Medical_Control_Program_PCMSO.recordType-meta.xml
<RecordType>
    <fullName>Occupational_Health_and_Medical_Control_Program_PCMSO</fullName>
    <active>true</active>
    <description>Occupational Health and Medical Control Program – PCMSO (Programa de Controle Médico e Saúde Ocupacional -PCMSO)</description>
    <label>Occupational Health and Medical Control Program – PCMSO</label>
</RecordType>