force-app/main/default/objects/TW1_Documentation__c/recordTypes/Offshore_experience.recordType-meta.xml
<RecordType>
    <fullName>Offshore_experience</fullName>
    <active>true</active>
    <label>Offshore experience</label>
</RecordType>