force-app/main/default/objects/TW1_Documentation__c/recordTypes/Performance_Measurement_System.recordType-meta.xml
<RecordType>
    <fullName>Performance_Measurement_System</fullName>
    <active>true</active>
    <label>Performance Measurement System</label>
</RecordType>