force-app/main/default/objects/TW1_Documentation__c/recordTypes/Product_Certification.recordType-meta.xml
<RecordType>
    <fullName>Product_Certification</fullName>
    <active>true</active>
    <label>Product Certification</label>
</RecordType>