force-app/main/default/objects/TW1_Documentation__c/recordTypes/Prohibited_Party_Search_PPS.recordType-meta.xml
<RecordType>
    <fullName>Prohibited_Party_Search_PPS</fullName>
    <active>true</active>
    <label>Prohibited Party Search (PPS)</label>
</RecordType>