force-app/main/default/objects/TW1_Documentation__c/recordTypes/Qualified_Supplier_List.recordType-meta.xml
<RecordType>
    <fullName>Qualified_Supplier_List</fullName>
    <active>true</active>
    <label>Qualified Supplier List</label>
</RecordType>