force-app/main/default/objects/TW1_Documentation__c/recordTypes/Quality_Assessment.recordType-meta.xml
<RecordType>
    <fullName>Quality_Assessment</fullName>
    <active>true</active>
    <label>Quality Assessment</label>
</RecordType>