force-app/main/default/objects/TW1_Documentation__c/recordTypes/Quality_Audit_may_be_required_by_MODEC.recordType-meta.xml
<RecordType>
    <fullName>Quality_Audit_may_be_required_by_MODEC</fullName>
    <active>true</active>
    <label>Quality Audit may be required by MODEC</label>
</RecordType>