force-app/main/default/objects/TW1_Documentation__c/recordTypes/Quality_System_Certification.recordType-meta.xml
<RecordType>
    <fullName>Quality_System_Certification</fullName>
    <active>true</active>
    <label>Quality System Certification</label>
</RecordType>