force-app/main/default/objects/TW1_Documentation__c/recordTypes/References_Check.recordType-meta.xml
<RecordType>
    <fullName>References_Check</fullName>
    <active>true</active>
    <label>References Check</label>
</RecordType>