force-app/main/default/objects/TW1_Documentation__c/recordTypes/Relato_Mais_Serasa.recordType-meta.xml
<RecordType>
    <fullName>Relato_Mais_Serasa</fullName>
    <active>true</active>
    <label>Relato Mais (Serasa)</label>
</RecordType>