force-app/main/default/objects/TW1_Documentation__c/recordTypes/ReportIncidensInvestigation.recordType-meta.xml
<RecordType>
    <fullName>ReportIncidensInvestigation</fullName>
    <active>true</active>
    <description>Relatório de investigação de incidentes</description>
    <label>Report of Incidens Investigation</label>
</RecordType>