force-app/main/default/objects/TW1_Documentation__c/recordTypes/Request_for_Requisite_Vendor_Vetting_Form.recordType-meta.xml
<RecordType>
    <fullName>Request_for_Requisite_Vendor_Vetting_Form</fullName>
    <active>true</active>
    <label>Request for Requisite Vendor Vetting Form</label>
</RecordType>