force-app/main/default/objects/TW1_Documentation__c/recordTypes/RTStepWarningConfirmation.recordType-meta.xml
<RecordType>
    <fullName>RTStepWarningConfirmation</fullName>
    <active>true</active>
    <label>Warning Confirmation Document</label>
</RecordType>