force-app/main/default/objects/TW1_Documentation__c/recordTypes/Satisfactory_Dun_Bradstreet_Report_or_equivalent_satisfactory_financial_report.recordType-meta.xml
<RecordType>
    <fullName>Satisfactory_Dun_Bradstreet_Report_or_equivalent_satisfactory_financial_report</fullName>
    <active>true</active>
    <description>Satisfactory Dun &amp; Bradstreet Report or equivalent satisfactory financial report in English</description>
    <label>Satisfactory Dun &amp; Bradstreet Report or equivalent satisfactory financial report</label>
</RecordType>