force-app/main/default/objects/TW1_Documentation__c/recordTypes/Serasa.recordType-meta.xml
<RecordType>
    <fullName>Serasa</fullName>
    <active>true</active>
    <label>Serasa</label>
</RecordType>