force-app/main/default/objects/TW1_Documentation__c/recordTypes/Signed_contract.recordType-meta.xml
<RecordType>
    <fullName>Signed_contract</fullName>
    <active>true</active>
    <label>Signed contract</label>
</RecordType>