force-app/main/default/objects/TW1_Documentation__c/recordTypes/Supplier_Selection_Qualification_Procedure.recordType-meta.xml
<RecordType>
    <fullName>Supplier_Selection_Qualification_Procedure</fullName>
    <active>true</active>
    <label>Supplier Selection / Qualification Procedure</label>
</RecordType>