force-app/main/default/objects/TW1_Documentation__c/recordTypes/T_PO_Review_Form.recordType-meta.xml
<RecordType>
    <fullName>T_PO_Review_Form</fullName>
    <active>true</active>
    <label>PO Review Form</label>
</RecordType>