force-app/main/default/objects/TW1_Documentation__c/recordTypes/Training_Matrix_Matriz_de_Treinamento.recordType-meta.xml
<RecordType>
    <fullName>Training_Matrix_Matriz_de_Treinamento</fullName>
    <active>true</active>
    <label>Training Matrix (Matriz de Treinamento)</label>
</RecordType>