force-app/main/default/objects/TW1_Documentation__c/recordTypes/TRT_02RegulatoryDocumentation.recordType-meta.xml
<RecordType>
    <fullName>TRT_02RegulatoryDocumentation</fullName>
    <active>true</active>
    <label>2. Regulatory Documentation</label>
</RecordType>