force-app/main/default/objects/TW1_Documentation__c/recordTypes/TRT_03LeadershipRoleResponsibility.recordType-meta.xml
<RecordType>
    <fullName>TRT_03LeadershipRoleResponsibility</fullName>
    <active>true</active>
    <label>3. Leadership, Role and Responsibility</label>
</RecordType>