force-app/main/default/objects/TW1_Documentation__c/recordTypes/TRT_04RiskManagement.recordType-meta.xml
<RecordType>
    <fullName>TRT_04RiskManagement</fullName>
    <active>true</active>
    <label>4. Risk Management</label>
</RecordType>