force-app/main/default/objects/TW1_Documentation__c/recordTypes/TRT_05PeopleManagement.recordType-meta.xml
<RecordType>
    <fullName>TRT_05PeopleManagement</fullName>
    <active>true</active>
    <label>5. People Management</label>
</RecordType>