force-app/main/default/objects/TW1_Documentation__c/recordTypes/TRT_06CommunicationsHSE.recordType-meta.xml
<RecordType>
    <fullName>TRT_06CommunicationsHSE</fullName>
    <active>true</active>
    <label>6. HSEQ Communications</label>
</RecordType>