force-app/main/default/objects/TW1_Documentation__c/recordTypes/TRT_07Observations.recordType-meta.xml
<RecordType>
    <fullName>TRT_07Observations</fullName>
    <active>true</active>
    <label>7. Observations</label>
</RecordType>