force-app/main/default/objects/TW1_Documentation__c/recordTypes/TRT_08InternalAudits.recordType-meta.xml
<RecordType>
    <fullName>TRT_08InternalAudits</fullName>
    <active>true</active>
    <label>8. Audits</label>
</RecordType>