force-app/main/default/objects/TW1_Documentation__c/recordTypes/TRT_09EmergencyManagement.recordType-meta.xml
<RecordType>
    <fullName>TRT_09EmergencyManagement</fullName>
    <active>true</active>
    <label>9. Emergency Preparedness and Response</label>
</RecordType>