force-app/main/default/objects/TW1_Documentation__c/recordTypes/TRT_10EnvironmentalManagement.recordType-meta.xml
<RecordType>
    <fullName>TRT_10EnvironmentalManagement</fullName>
    <active>true</active>
    <label>10. Environmental Management</label>
</RecordType>