force-app/main/default/objects/TW1_Documentation__c/recordTypes/TRT_11AccidentHistory.recordType-meta.xml
<RecordType>
    <fullName>TRT_11AccidentHistory</fullName>
    <active>true</active>
    <label>11. History of Accident / Incidents</label>
</RecordType>