force-app/main/default/objects/TW1_Documentation__c/recordTypes/TRT_12EquipmentMaintenanceCalibration.recordType-meta.xml
<RecordType>
    <fullName>TRT_12EquipmentMaintenanceCalibration</fullName>
    <active>true</active>
    <label>12. Equipment Maintenance/Calibration</label>
</RecordType>