force-app/main/default/objects/TW1_Documentation__c/recordTypes/TW1_Aditivo.recordType-meta.xml
<RecordType>
    <fullName>TW1_Aditivo</fullName>
    <active>true</active>
    <label>Aditivo</label>
</RecordType>