force-app/main/default/objects/TW1_Documentation__c/recordTypes/TW1_Draft.recordType-meta.xml
<RecordType>
    <fullName>TW1_Draft</fullName>
    <active>true</active>
    <label>Draft</label>
</RecordType>