force-app/main/default/objects/TW1_Documentation__c/recordTypes/TW1_Fiscal_Documentation.recordType-meta.xml
<RecordType>
    <fullName>TW1_Fiscal_Documentation</fullName>
    <active>true</active>
    <label>Fiscal Documentation</label>
</RecordType>