force-app/main/default/objects/TW1_Documentation__c/recordTypes/TW1_Inspection_Documentation.recordType-meta.xml
<RecordType>
    <fullName>TW1_Inspection_Documentation</fullName>
    <active>true</active>
    <label>Inspection Documentation</label>
</RecordType>