force-app/main/default/objects/TW1_Documentation__c/recordTypes/TW1_NF_Attachment.recordType-meta.xml
<RecordType>
    <fullName>TW1_NF_Attachment</fullName>
    <active>true</active>
    <label>NF Attachment</label>
</RecordType>