force-app/main/default/objects/TW1_Documentation__c/recordTypes/TW1_Outros.recordType-meta.xml
<RecordType>
    <fullName>TW1_Outros</fullName>
    <active>true</active>
    <label>Outros</label>
</RecordType>