force-app/main/default/objects/TW1_Documentation__c/recordTypes/TW1_Procurement_Procedures.recordType-meta.xml
<RecordType>
    <fullName>TW1_Procurement_Procedures</fullName>
    <active>true</active>
    <label>Procurement Procedures</label>
</RecordType>