force-app/main/default/objects/TW1_Documentation__c/recordTypes/TW1_Vendor_Vetting_Worksheet.recordType-meta.xml
<RecordType>
    <fullName>TW1_Vendor_Vetting_Worksheet</fullName>
    <active>true</active>
    <label>Vendor Vetting Worksheet</label>
</RecordType>