force-app/main/default/objects/TW1_Documentation__c/recordTypes/TW1_VVW_Attachment.recordType-meta.xml
<RecordType>
    <fullName>TW1_VVW_Attachment</fullName>
    <active>true</active>
    <label>VVW Attachment</label>
</RecordType>