force-app/main/default/objects/TW1_Documentation__c/recordTypes/TW5_QualityReceiptInspectionSupplierDocumentation.recordType-meta.xml
<RecordType>
    <fullName>TW5_QualityReceiptInspectionSupplierDocumentation</fullName>
    <active>true</active>
    <label>Quality Receipt Inspection Supplier Documentation</label>
</RecordType>