force-app/main/default/objects/TW1_Documentation__c/recordTypes/Vendor_Due_Diligence_Questionnaire.recordType-meta.xml
<RecordType>
    <fullName>Vendor_Due_Diligence_Questionnaire</fullName>
    <active>true</active>
    <label>Vendor Due Diligence Questionnaire</label>
</RecordType>