force-app/main/default/objects/TW1_Documentation__c/recordTypes/Vendor_Vetting_Advisory_and_Management_Approval_finance.recordType-meta.xml
<RecordType>
    <fullName>Vendor_Vetting_Advisory_and_Management_Approval_finance</fullName>
    <active>true</active>
    <label>Vendor Vetting Advisory and Management Approval finance</label>
</RecordType>