force-app/main/default/objects/TW1_Documentation__c/validationRules/fiscal_document_amount_for_BM.validationRule-meta.xml
<ValidationRule>
    <fullName>fiscal_document_amount_for_BM</fullName>
    <active>true</active>
    <errorConditionFormula>TW1_Request__r.TW1_Count_fiscal_docs__c &gt;= 1</errorConditionFormula>
    <errorMessage>Each BM must have only one fiscal document</errorMessage>
</ValidationRule>