force-app/main/default/objects/TW1_Documentation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <role>Administrator</role>
    </sharedTo>
</ListView>